--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "lib": ["es2020", "esnext.array", "DOM"]
   },
   "include": ["./src/**/*.ts"],
-  "exclude": ["node_modules", "src/Tests/*", "src/Binary/GenerateStatics.ts"]
+  "exclude": ["node_modules", "src/Tests/*", "src/Binary/GenerateStatics.ts", "**/*.test.ts"]
 }
