--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,7 +16,7 @@ jobs:
         node-version: 20.x
 
     - name: Install packages
-      run: yarn
+      run: npm ci
     
     - name: Check linting
-      run: yarn lint
+      run: npm run lint
