feat: implement comprehensive testing with Vitest (144 tests, 100% line coverage) (#4)
* chore: remove yarn.lock for npm migration

* chore: migrate from yarn to npm and add vitest dependencies

* feat: add vitest configuration with v8 coverage

* chore: remove deprecated jest configuration

* test: add comprehensive tests for ObjectRepository (15 tests, 100% coverage)

* test: add comprehensive tests for makeOrderedDictionary (20 tests, 100% coverage)

* test: add comprehensive tests for makeCacheManagerStore (16 tests, 100% coverage)

* test: add comprehensive tests for makeInMemoryStore (91 tests, 100% line coverage)

* test: add tests for module exports (2 tests, 100% coverage)

* chore: exclude test files from TypeScript compilation

* fix: correct ESLint rule configuration syntax

* chore: add coverage directory to gitignore

* ci: update lint workflow to use npm instead of yarn

* ci: force ESLint to use legacy config format

* fix: use standalone ESLint config compatible with legacy format

* fix: resolve all ESLint keyword-spacing warnings and update lint:fix script

* refactor: migrate to ESLint 9 flat config format

* ci: add test execution to workflow and update README badges

* test: add assertion for unused url variable in fetchImageUrl test

Address Copilot review comment by asserting the return value of fetchImageUrl.

* ci: split lint and test into separate workflow jobs

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -3,20 +3,41 @@ name: Check PR health
 on: [pull_request]
 
 jobs:
-  check-lint:
+  lint:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
     - name: Install Node
-      uses: actions/setup-node@v1
+      uses: actions/setup-node@v4
       with:
         node-version: 20.x
 
     - name: Install packages
-      run: yarn
-    
+      run: npm ci
+
     - name: Check linting
-      run: yarn lint
+      run: npm run lint
+
+  test:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Install Node
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20.x
+
+    - name: Install packages
+      run: npm ci
+
+    - name: Run tests
+      run: npm test
+
+    - name: Run tests with coverage
+      run: npm run test:coverage
