refactor: migrate from cache-manager to Keyv
- Replace cache-manager with Keyv for simpler API
- Update makeCacheManagerAuthState to use Keyv interface
- Implement proper clearState() using Keyv.clear() method
- Update TTL from seconds to milliseconds (Keyv standard)
- Change del() to delete() to match Keyv API
- Export Keyv class for user convenience
- Update tests with new Keyv mock
- Add proper clearState tests (now fully functional)
- Update README with Keyv usage examples
- Maintain backwards compatible function name

Benefits:
- Lighter weight (Keyv is ~100KB smaller)
- Simpler and more direct API
- Full clearState() implementation (was incomplete before)
- Same storage backend flexibility via Keyv adapters
- Better maintained (same maintainer, more focused project)

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "dependencies": {
     "@adiwajshing/keyed-db": "0.2.4",
-    "cache-manager": "7.2.4"
+    "keyv": "^5.5.5"
   },
   "devDependencies": {
     "@types/node": "^20.17.9",
