refactor(test-app): migrate from CLI to SvelteKit web UI with store inspector
- Replaced terminal-based CLI with modern SvelteKit web interface
- Added Baileys v6/v7 version switching with dynamic loader
- Implemented Store Inspector dashboard with real-time stats
- Added Events Log page with pagination (50 events/page) and filtering
- Implemented store data management (analyze, clear, raw data viewer)
- Added real-time updates via Server-Sent Events (SSE)
- Removed unused pages: chats, contacts, analytics
- Configured Biome for linting/formatting, removed ESLint
- Enhanced store analysis with quality scores and breakdowns
- Added Tailwind CSS 4.1 for styling

Breaking Changes:
- Removed CLI-based app.ts and connection managers
- Now requires browser for testing (previously terminal-only)

--- a/test-app/.gitignore
+++ b/test-app/.gitignore
@@ -3,11 +3,14 @@ node_modules/
 
 # Build output
 dist/
+build/
+.svelte-kit/
 
 # WhatsApp auth and store files
 auth_info_*/
 baileys_store_*.json
 *.session
+.data/
 
 # Temporary files and event monitoring
 .tmp/
